--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "hugomagalhaes.com jekyll website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "bundle exec jekyll build && node scripts/deploy.js"
   },
   "repository": {
     "type": "git",
