--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "bundle exec jekyll serve",
     "deploy": "bundle exec jekyll build && node scripts/deploy.js"
   },
   "repository": {
